refactor: adapt sass to @use instead of @import
BREAKING CHANGE:
Previously the sass code could be used via `@import`.
 This is no longer possible as we refactored the sass code to switch
 from `@import` to `@use` (see https://sass-lang.com/documentation/at-rules/use).
 You should now be able to use the following code to import
 our sass code: `@use '@sbb-esta/lyne-components' as sbb;`.

--- a/_index.scss
+++ b/_index.scss
@@ -1,6 +1,1 @@
-@import 'src/global/styles/component-utilities.scss';
-@import 'src/global/styles/functions.scss';
-@import 'src/global/styles/mediaqueries.scss';
-@import 'src/global/styles/mixins.scss';
-@import 'src/global/styles/variables.scss';
-@warn "The sass API of @sbb-esta/lyne-components is still experimental and subject to change.";
+@forward 'src/global/styles/_index' hide development-style, host-component-properties;
