--- a/src/components/sbb-action-group/sbb-action-group.scss
+++ b/src/components/sbb-action-group/sbb-action-group.scss
@@ -1,6 +1,8 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 $breakpoints: 'zero', 'micro', 'small', 'medium', 'large', 'wide', 'ultra';
 $vertical-orientations: (
@@ -42,7 +44,7 @@ $horizontal-orientations: (
 }
 
 @each $breakpoint in $breakpoints {
-  @include mq($from: #{$breakpoint}) {
+  @include sbb.mq($from: #{$breakpoint}) {
     @each $key, $value in $horizontal-orientations {
       // horizontal-from overrides orientation vertical
       :host([orientation='vertical'][horizontal-from='#{$breakpoint}'][align-group='#{$key}']) {
