--- a/src/components/sbb-timetable-travel-hints/sbb-timetable-travel-hints.scss
+++ b/src/components/sbb-timetable-travel-hints/sbb-timetable-travel-hints.scss
@@ -1,19 +1,21 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 :host {
-  --travel-hint-icon-height: #{px-to-rem-build(12)};
+  --travel-hint-icon-height: #{sbb.px-to-rem-build(12)};
   --travel-hint-icon-scaling-factor: 0.75;
 
-  @include mq($from: medium) {
-    --travel-hint-icon-height: #{px-to-rem-build(16)};
+  @include sbb.mq($from: medium) {
+    --travel-hint-icon-height: #{sbb.px-to-rem-build(16)};
     --travel-hint-icon-scaling-factor: 1;
   }
 }
 
 .travel-hints__list {
-  @include list-reset;
+  @include sbb.list-reset;
 
   display: flex;
   gap: var(--sbb-spacing-fixed-1x);
@@ -38,11 +40,11 @@
 }
 
 .travel-hints__text--visually-hidden {
-  @include screenReaderOnly;
+  @include sbb.screenReaderOnly;
 }
 
 @mixin widthWithScalingFactor($width) {
-  width: calc(var(--travel-hint-icon-scaling-factor) * #{px-to-rem-build($width)});
+  width: calc(var(--travel-hint-icon-scaling-factor) * #{sbb.px-to-rem-build($width)});
 }
 
 // This might look like a terribly complicated solution but was unfortunately the most efficient and
