--- a/src/components/sbb-grid/sbb-grid.scss
+++ b/src/components/sbb-grid/sbb-grid.scss
@@ -1,12 +1,14 @@
 /* stylelint-disable */
 // TODO: solve stylelint issues
 
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 .grid--base {
-  @include grid-base;
+  @include sbb.grid-base;
 }
 
 ////////////////////////////////////////////////////////////////////////
@@ -14,7 +16,7 @@
 ////////////////////////////////////////////////////////////////////////
 
 .grid--base--top-products {
-  @include grid-base-top-products;
+  @include sbb.grid-base-top-products;
 }
 
 //   --------------------------------    -------------------------------
@@ -35,60 +37,60 @@
 
 ::slotted([slot='top-product-1']) {
   grid-column: 1/-1;
-  @include mq($from: medium) {
+  @include sbb.mq($from: medium) {
     grid-area: 1 / 1 / 2 / 5;
   }
-  @include mq($from: wide) {
+  @include sbb.mq($from: wide) {
     grid-area: 1 / 1 / 2 / 7;
   }
 }
 
 ::slotted([slot='top-product-2']) {
   grid-column: 1/-1;
-  @include mq($from: medium) {
+  @include sbb.mq($from: medium) {
     grid-area: 2 / 1 / 3 / 5;
   }
-  @include mq($from: wide) {
+  @include sbb.mq($from: wide) {
     grid-area: 2 / 1 / 3 / 7;
   }
 }
 
 ::slotted([slot='top-product-3']) {
   grid-column: 1/-1;
-  @include mq($from: medium) {
+  @include sbb.mq($from: medium) {
     grid-area: 3 / 1 / 4 / 5;
   }
-  @include mq($from: wide) {
+  @include sbb.mq($from: wide) {
     grid-area: 3 / 1 / 4 / 7;
   }
 }
 
 ::slotted([slot='top-product-4']) {
   grid-column: 1/-1;
-  @include mq($from: medium) {
+  @include sbb.mq($from: medium) {
     grid-area: 4 / 1 / 5 / 5;
   }
-  @include mq($from: wide) {
+  @include sbb.mq($from: wide) {
     grid-area: 4 / 1 / 5 / 7;
   }
 }
 
 ::slotted([slot='top-product-subscription-1']) {
   grid-column: 1/-1;
-  @include mq($from: medium) {
+  @include sbb.mq($from: medium) {
     grid-area: 1 / 5 / 3 / -1;
   }
-  @include mq($from: wide) {
+  @include sbb.mq($from: wide) {
     grid-area: 1 / 7 / 3 / -1;
   }
 }
 
 ::slotted([slot='top-product-subscription-2']) {
   grid-column: 1/-1;
-  @include mq($from: medium) {
+  @include sbb.mq($from: medium) {
     grid-area: 3 / 5 / 5 / -1;
   }
-  @include mq($from: wide) {
+  @include sbb.mq($from: wide) {
     grid-area: 3 / 7 / 5 / -1;
   }
 }
@@ -98,7 +100,7 @@
 ////////////////////////////////////////////////////////////////////////
 
 .grid--base--eight-columns-centered {
-  @include grid-base;
+  @include sbb.grid-base;
 }
 
 //          --------------------------------------------------
@@ -113,10 +115,10 @@
 
 ::slotted([slot='eight-columns-centered']) {
   grid-column: 1/-1;
-  @include mq($from: large) {
+  @include sbb.mq($from: large) {
     grid-column: 2/8;
   }
-  @include mq($from: wide) {
+  @include sbb.mq($from: wide) {
     grid-column: 3/11;
   }
 }
