--- a/src/components/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
+++ b/src/components/sbb-pearl-chain-time/sbb-pearl-chain-time.scss
@@ -1,4 +1,8 @@
-@include host-component-properties;
+@use '../../global/styles' as sbb;
+
+// Default component properties, defined for :host. Properties which can not
+// travel the shadow boundary are defined through this mixin
+@include sbb.host-component-properties;
 
 .sbb-pearl-chain__time {
   display: flex;
@@ -7,7 +11,7 @@
 }
 
 .sbb-pearl-chain__time-walktime {
-  @include text-xxs--regular;
+  @include sbb.text-xxs--regular;
 
   display: inline-flex;
   align-items: center;
@@ -28,9 +32,9 @@
 }
 
 .sbb-pearl-chain__time-time {
-  @include text-s--bold;
+  @include sbb.text-s--bold;
 }
 
 .sbb-screenreaderonly {
-  @include screenReaderOnly;
+  @include sbb.screenReaderOnly;
 }
