--- a/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
+++ b/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
@@ -1,4 +1,8 @@
-@include host-component-properties;
+@use '../../global/styles' as sbb;
+
+// Default component properties, defined for :host. Properties which can not
+// travel the shadow boundary are defined through this mixin
+@include sbb.host-component-properties;
 
 @mixin dot {
   border-radius: 100%;
@@ -15,7 +19,7 @@
   background-color: transparent;
   z-index: 2;
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     .pearl-chain--past & {
       border-color: GrayText;
     }
@@ -28,10 +32,10 @@
 
   --sbb-pearl-chain-vertical-right-item-width: 100%;
   --sbb-pearl-chain-vertical-item-dot-size-ultra: var(--sbb-spacing-fixed-3x);
-  --sbb-pearl-chain-vertical-item-dot-size-large: #{px-to-rem-build(10)};
+  --sbb-pearl-chain-vertical-item-dot-size-large: #{sbb.px-to-rem-build(10)};
   --sbb-pearl-chain-vertical-item-dot-size-medium: var(--sbb-spacing-fixed-2x);
-  --sbb-pearl-chain-vertical-item-dot-size-small: #{px-to-rem-build(7)};
-  --sbb-pearl-chain-vertical-item-dot-size-extra-small: #{px-to-rem-build(6)};
+  --sbb-pearl-chain-vertical-item-dot-size-small: #{sbb.px-to-rem-build(7)};
+  --sbb-pearl-chain-vertical-item-dot-size-extra-small: #{sbb.px-to-rem-build(6)};
   --sbb-pearl-chain-vertical-item-dot-size: var(--sbb-pearl-chain-vertical-item-dot-size-small);
   --sbb-pearl-chain-vertical-item-bullet-border-width: var(--sbb-border-width-2x);
   --sbb-pearl-chain-vertical-item-border-width: var(--sbb-border-width-2x);
@@ -231,7 +235,7 @@ slot[name='right']::slotted(*) {
   }
 
   50% {
-    box-shadow: 0 0 0 #{px-to-rem-build(4)} var(--sbb-color-red-alpha-20);
+    box-shadow: 0 0 0 #{sbb.px-to-rem-build(4)} var(--sbb-color-red-alpha-20);
   }
 
   100% {
