--- a/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
+++ b/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
@@ -1,4 +1,8 @@
-@include host-component-properties;
+@use '../../global/styles' as sbb;
+
+// Default component properties, defined for :host. Properties which can not
+// travel the shadow boundary are defined through this mixin
+@include sbb.host-component-properties;
 
 :host {
   --sbb-pearl-chain-vertical-width: 100%;
