--- a/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
+++ b/src/components/sbb-pearl-chain/sbb-pearl-chain.scss
@@ -1,6 +1,8 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 @mixin dot {
   content: '';
@@ -13,8 +15,8 @@
 :host {
   display: block;
 
-  --sbb-dot-size-large: #{px-to-rem-build(10)};
-  --sbb-dot-size-small: #{px-to-rem-build(8)};
+  --sbb-dot-size-large: #{sbb.px-to-rem-build(10)};
+  --sbb-dot-size-small: #{sbb.px-to-rem-build(8)};
   --sbb-pearl-chain-height: var(--sbb-border-width-2x);
   --sbb-pearl-chain-spacing-small: var(--sbb-spacing-fixed-1x);
   --color-white: var(--sbb-color-white-default);
@@ -48,7 +50,7 @@
   inset-block-start: 0;
   z-index: 3;
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     background-color: CanvasText;
   }
 }
@@ -63,7 +65,7 @@
 
 .sbb-pearl-chain.sbb-pearl-chain--past::before,
 .sbb-pearl-chain.sbb-pearl-chain--past::after {
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     background-color: GrayText;
   }
 }
@@ -72,7 +74,7 @@
 .sbb-pearl-chain--arrival-cancellation::after {
   color: var(--color-cancellation);
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     background-color: ActiveText;
   }
 }
@@ -81,7 +83,7 @@
 .sbb-pearl-chain--arrival-cancellation.pearl-chain--past::after {
   color: var(--color-past);
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     color: GrayText;
   }
 }
@@ -89,7 +91,7 @@
 .sbb-pearl-chain--past {
   position: relative;
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     color: GrayText;
   }
 }
@@ -103,7 +105,7 @@
   background-color: currentcolor;
   width: var(--leg-width);
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     color: CanvasText;
   }
 }
@@ -131,7 +133,7 @@
     border: var(--sbb-pearl-chain-height) solid currentcolor;
     z-index: 2;
 
-    @include ifForcedColors {
+    @include sbb.ifForcedColors {
       .sbb-pearl-chain--past & {
         border-color: GrayText;
       }
@@ -150,7 +152,7 @@
   border-radius: var(--sbb-pearl-chain-height);
   z-index: 1;
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     background-color: CanvasText;
 
     .sbb-pearl-chain--past & {
@@ -171,7 +173,7 @@
 .sbb-pearl-chain__leg--cancellation {
   color: var(--color-cancellation);
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     color: ActiveText;
   }
 }
@@ -186,10 +188,10 @@
 
 .sbb-pearl-chain__leg--cancellation::after,
 .sbb-pearl-chain--past .sbb-pearl-chain__leg--cancellation::after {
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     background: none;
-    border-block-start: #{px-to-rem-build(1)} dashed currentcolor;
-    transform: translateY(#{px-to-rem-build(1)});
+    border-block-start: #{sbb.px-to-rem-build(1)} dashed currentcolor;
+    transform: translateY(#{sbb.px-to-rem-build(1)});
   }
 }
 
@@ -207,7 +209,7 @@
   inset-inline-start: var(--status-position);
   animation: pulse 3s infinite;
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     background-color: ActiveText;
   }
 }
@@ -222,6 +224,6 @@
   }
 
   40% {
-    box-shadow: 0 0 0 #{px-to-rem-build(6)} transparent;
+    box-shadow: 0 0 0 #{sbb.px-to-rem-build(6)} transparent;
   }
 }
