--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -1,6 +1,8 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 :host {
   --sbb-radio-button-label-color: var(--color-black-default);
@@ -16,7 +18,7 @@
 }
 
 :host(:focus-visible) {
-  @include focusOutline;
+  @include sbb.focusOutline;
 
   border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
 }
@@ -27,12 +29,12 @@
 }
 
 .sbb-radio-button__input {
-  @include screenReaderOnly;
+  @include sbb.screenReaderOnly;
 }
 
 // One radio button per line
 .sbb-radio-button {
-  @include text-m--regular;
+  @include sbb.text-m--regular;
 
   cursor: pointer;
   user-select: none;
@@ -41,7 +43,7 @@
   -webkit-tap-highlight-color: transparent;
 
   :host([size='s']) & {
-    @include text-s--regular;
+    @include sbb.text-s--regular;
   }
 
   :host([data-group-disabled]) &,
@@ -78,7 +80,7 @@
 
     :host([data-group-disabled]) &,
     :host([disabled]) & {
-      @include ifForcedColors {
+      @include sbb.ifForcedColors {
         border-color: GrayText;
       }
     }
@@ -89,7 +91,7 @@
 .sbb-radio-button__input:checked + .sbb-radio-button__label-slot::before {
   --sbb-radio-button-background-color: var(--sbb-color-red-default);
 
-  border-width: #{px-to-rem-build(6)};
+  border-width: #{sbb.px-to-rem-build(6)};
 
   :host([data-group-disabled]) &,
   :host([disabled]) & {
