--- a/src/components/sbb-tab-amount/sbb-tab-amount.scss
+++ b/src/components/sbb-tab-amount/sbb-tab-amount.scss
@@ -1,10 +1,12 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 :host {
-  @include text-xs--regular;
-  @include fontSmoothing;
+  @include sbb.text-xs--regular;
+  @include sbb.fontSmoothing;
 
   display: inline-block;
 }
