--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -1,7 +1,8 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
-// travel the shadow boundary are defined through this mixin, available for shared
-// and default mode
-@include host-component-properties;
+// travel the shadow boundary are defined through this mixin
+@include sbb.host-component-properties;
 
 :host {
   display: inline-block;
@@ -22,13 +23,13 @@
 }
 
 .sbb-teaser {
-  @include zeroWidthSpace;
+  @include sbb.zeroWidthSpace;
 
   display: flex;
   text-decoration: none;
 
   &:focus-visible {
-    @include focusOutline;
+    @include sbb.focusOutline;
   }
 }
 
@@ -46,7 +47,7 @@
   transition: var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
   aspect-ratio: 4 / 3;
 
-  @include hover-mq($hover: true) {
+  @include sbb.hover-mq($hover: true) {
     .sbb-teaser:hover & {
       transform: scale(var(--sbb-teaser-scale-hover));
     }
@@ -59,20 +60,20 @@
   border-radius: var(--sbb-border-radius-4x);
   transition: var(--sbb-animation-duration-6x) var(--sbb-animation-easing);
 
-  @include hover-mq($hover: true) {
+  @include sbb.hover-mq($hover: true) {
     .sbb-teaser:hover & {
-      @include shadow-level-9-hard;
+      @include sbb.shadow-level-9-hard;
     }
   }
 }
 
 .sbb-teaser__lead {
-  @include clampLines($lines: 2);
+  @include sbb.clampLines($lines: 2);
 }
 
 .sbb-teaser__description {
-  @include text-s--regular;
-  @include clampLines($lines: 2);
+  @include sbb.text-s--regular;
+  @include sbb.clampLines($lines: 2);
 
   color: var(--sbb-teaser-description-color);
 }
@@ -82,5 +83,5 @@
 }
 
 .sbb-teaser__opens-in-new-window {
-  @include screenReaderOnly;
+  @include sbb.screenReaderOnly;
 }
