--- a/src/components/sbb-timetable-barrier-free/sbb-timetable-barrier-free.scss
+++ b/src/components/sbb-timetable-barrier-free/sbb-timetable-barrier-free.scss
@@ -1,9 +1,11 @@
+@use '../../global/styles' as sbb;
+
 // Default component properties, defined for :host. Properties which can not
 // travel the shadow boundary are defined through this mixin
-@include host-component-properties;
+@include sbb.host-component-properties;
 
 :host {
-  --barrier-free-icon-size: #{px-to-rem-build(24)};
+  --barrier-free-icon-size: #{sbb.px-to-rem-build(24)};
   --barrier-free-icon-padding-inline-start: calc(
     var(--barrier-free-icon-size) + var(--sbb-spacing-fixed-1x)
   );
@@ -12,7 +14,7 @@
 .barrier-free {
   display: flex;
   position: relative;
-  @include text-xs--regular;
+  @include sbb.text-xs--regular;
 
   margin: 0;
   color: var(--sbb-color-anthracite-default);
@@ -21,7 +23,7 @@
 
 .barrier-free__icon {
   position: absolute;
-  inset-block-start: #{px-to-rem-build(-1)};
+  inset-block-start: #{sbb.px-to-rem-build(-1)};
   inset-inline-start: 0;
   fill: currentcolor;
   width: var(--barrier-free-icon-size);
@@ -33,5 +35,5 @@
 }
 
 .barrier-free__text--visually-hidden {
-  @include screenReaderOnly;
+  @include sbb.screenReaderOnly;
 }
