--- a/src/components/sbb-timetable-occupancy/sbb-timetable-occupancy.scss
+++ b/src/components/sbb-timetable-occupancy/sbb-timetable-occupancy.scss
@@ -1,15 +1,17 @@
-:host {
-  --occupancy-icon-height: #{px-to-rem-build(12)};
-  --occupancy-icon-width: #{px-to-rem-build(14)};
+@use '../../global/styles' as sbb;
 
-  @include mq($from: medium) {
-    --occupancy-icon-height: #{px-to-rem-build(16)};
-    --occupancy-icon-width: #{px-to-rem-build(19)};
+:host {
+  --occupancy-icon-height: #{sbb.px-to-rem-build(12)};
+  --occupancy-icon-width: #{sbb.px-to-rem-build(14)};
+
+  @include sbb.mq($from: medium) {
+    --occupancy-icon-height: #{sbb.px-to-rem-build(16)};
+    --occupancy-icon-width: #{sbb.px-to-rem-build(19)};
   }
 }
 
 .occupancy__list {
-  @include list-reset;
+  @include sbb.list-reset;
 
   display: flex;
   align-items: center;
@@ -21,15 +23,15 @@
   display: flex;
   align-items: center;
   flex-wrap: nowrap;
-  gap: #{px-to-rem-build(2)};
+  gap: #{sbb.px-to-rem-build(2)};
 }
 
 .occupancy__class--visual {
-  @include text-s--regular;
+  @include sbb.text-s--regular;
 }
 
 .occupancy__class--visually-hidden {
-  @include screenReaderOnly;
+  @include sbb.screenReaderOnly;
 }
 
 .occupancy__icon {
