--- a/src/components/sbb-timetable-park-and-rail/sbb-timetable-park-and-rail.scss
+++ b/src/components/sbb-timetable-park-and-rail/sbb-timetable-park-and-rail.scss
@@ -1,9 +1,11 @@
+@use '../../global/styles' as sbb;
+
 :host {
-  --park-and-rail-icon-height: #{px-to-rem-build(16)};
+  --park-and-rail-icon-height: #{sbb.px-to-rem-build(16)};
   --park-and-rail-icon-width: var(--park-and-rail-icon-height);
 
-  @include mq($from: medium) {
-    --park-and-rail-icon-height: #{px-to-rem-build(24)};
+  @include sbb.mq($from: medium) {
+    --park-and-rail-icon-height: #{sbb.px-to-rem-build(24)};
     --park-and-rail-icon-width: var(--park-and-rail-icon-height);
   }
 }
@@ -13,7 +15,7 @@
   height: var(--park-and-rail-icon-height);
   width: var(--park-and-rail-icon-width);
 
-  @include ifForcedColors {
+  @include sbb.ifForcedColors {
     fill: CanvasText;
   }
 }
