--- a/src/components/sbb-timetable-row/sbb-timetable-row.scss
+++ b/src/components/sbb-timetable-row/sbb-timetable-row.scss
@@ -1,4 +1,8 @@
-@include host-component-properties;
+@use '../../global/styles' as sbb;
+
+// Default component properties, defined for :host. Properties which can not
+// travel the shadow boundary are defined through this mixin
+@include sbb.host-component-properties;
 
 :host {
   --sbb-timetable-row-gap: var(--sbb-spacing-fixed-2x);
@@ -13,20 +17,20 @@
 
 // override icons sizes
 .sbb-travel-hints__item {
-  --sbb-icon-svg-height: #{px-to-rem-build(14)};
+  --sbb-icon-svg-height: #{sbb.px-to-rem-build(14)};
 }
 
 // Design spec: icon should have spesific size
 .sbb-occupancy__item {
-  --sbb-icon-svg-height: #{px-to-rem-build(12)};
+  --sbb-icon-svg-height: #{sbb.px-to-rem-build(12)};
 
-  @include mq($from: medium) {
-    --sbb-icon-svg-height: #{px-to-rem-build(16)};
+  @include sbb.mq($from: medium) {
+    --sbb-icon-svg-height: #{sbb.px-to-rem-build(16)};
   }
 }
 
 .sbb-screenreaderonly {
-  @include screenReaderOnly;
+  @include sbb.screenReaderOnly;
 }
 
 .sbb-timetable__row--quay {
@@ -35,7 +39,7 @@
 
 // resets lists
 ul {
-  @include list-reset;
+  @include sbb.list-reset;
 
   display: inline-flex;
 }
@@ -51,7 +55,7 @@ li {
 
 .sbb-timetable__row-transportnumber,
 .sbb-timetable__row-time {
-  @include text-s--bold;
+  @include sbb.text-s--bold;
 
   line-height: unset;
   white-space: nowrap;
@@ -59,7 +63,7 @@ li {
 }
 
 .sbb-timetable__row {
-  @include text-s--regular;
+  @include sbb.text-s--regular;
 
   display: flex;
   flex-direction: column;
@@ -80,7 +84,7 @@ li {
 }
 
 .sbb-timetable__row-header p {
-  @include ellipsis;
+  @include sbb.ellipsis;
 
   margin: 0;
   align-self: center;
@@ -140,18 +144,18 @@ li {
   height: var(--sbb-timetable-row-loading-height);
   border-radius: var(--sbb-border-radius-1x);
 
-  @include mq($from: medium) {
+  @include sbb.mq($from: medium) {
     --sbb-timetable-row-loading-height: #{px-to-rem-build(27)};
   }
 }
 
 .sbb-loading__row:first-of-type {
   width: 50%;
-  height: #{px-to-rem-build(20)};
+  height: #{sbb.px-to-rem-build(20)};
 }
 
 .sbb-loading__row:last-of-type {
-  height: #{px-to-rem-build(16)};
+  height: #{sbb.px-to-rem-build(16)};
 }
 
 .sbb-loading__badge {
@@ -165,8 +169,8 @@ li {
   // Left to right expression
   right: calc(var(--sbb-spacing-fixed-3x) * -1);
   transform: skew(16deg, 0deg);
-  width: #{px-to-rem-build(115)};
-  height: #{px-to-rem-build(20)};
+  width: #{sbb.px-to-rem-build(115)};
+  height: #{sbb.px-to-rem-build(20)};
 }
 
 @keyframes skeleton-pulse {
