--- a/src/global/styles/core/component-utilities.scss
+++ b/src/global/styles/core/component-utilities.scss
@@ -1,3 +1,5 @@
+@use '../mixins/helpers';
+
 // *****************************************************************************
 //
 // Each component needs to use the host-component-properties mixin
@@ -6,7 +8,7 @@
 // *****************************************************************************
 
 @mixin host-component-properties {
-  @include box-sizing;
+  @include helpers.box-sizing;
 
   :host {
     display: block;
@@ -16,13 +18,5 @@
     border: 0;
     -moz-appearance: none;
     -webkit-appearance: none;
-  }
-}
-
-@mixin box-sizing {
-  *,
-  ::before,
-  ::after {
-    box-sizing: border-box;
   }
 }
