--- a/src/global/styles/core/variables.scss
+++ b/src/global/styles/core/variables.scss
@@ -1,3 +1,6 @@
+@use 'node_modules/@sbb-esta/lyne-design-tokens/dist/scss/sbb-variables_css--placeholder.scss';
+@use './mediaqueries';
+
 @mixin lyne-components-css-vars {
   // Grab css vars defined by `@sbb-esta/lyne-design-tokens` npm package
   @extend %lyne-design-tokens-css-variables;
@@ -20,11 +23,11 @@
   --sbb-font-size-text-xs: var(--sbb-typo-scale-0-75x);
   --sbb-font-size-text-xxs: var(--sbb-typo-scale-0-75x);
 
-  @include mq($from: small) {
+  @include mediaqueries.mq($from: small) {
     --sbb-font-size-title-1: var(--sbb-typo-scale-3x);
   }
 
-  @include mq($from: medium) {
+  @include mediaqueries.mq($from: medium) {
     --sbb-font-size-title-2: var(--sbb-typo-scale-2-5x);
     --sbb-font-size-title-3: var(--sbb-typo-scale-2x);
     --sbb-font-size-title-4: var(--sbb-typo-scale-1-5x);
@@ -37,11 +40,11 @@
     --sbb-font-size-text-xs: var(--sbb-typo-scale-0-875x);
   }
 
-  @include mq($from: large) {
+  @include mediaqueries.mq($from: large) {
     --sbb-font-size-title-1: var(--sbb-typo-scale-3-5x);
   }
 
-  @include mq($from: ultra) {
+  @include mediaqueries.mq($from: ultra) {
     --sbb-font-size-title-1: var(--sbb-typo-scale-4x);
   }
 
@@ -58,18 +61,18 @@
   --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-zero);
   --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-zero);
 
-  @include mq($from: micro) {
+  @include mediaqueries.mq($from: micro) {
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-micro);
   }
 
-  @include mq($from: small) {
+  @include mediaqueries.mq($from: small) {
     --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-small);
     --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-small);
     --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-small);
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-small);
   }
 
-  @include mq($from: medium) {
+  @include mediaqueries.mq($from: medium) {
     --sbb-spacing-responsive-xxxs: var(--sbb-spacing-responsive-xxxs-medium);
     --sbb-spacing-responsive-xxs: var(--sbb-spacing-responsive-xxs-medium);
     --sbb-spacing-responsive-xs: var(--sbb-spacing-responsive-xs-medium);
@@ -81,19 +84,19 @@
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-medium);
   }
 
-  @include mq($from: large) {
+  @include mediaqueries.mq($from: large) {
     --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-large);
     --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-large);
     --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-large);
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-large);
   }
 
-  @include mq($from: wide) {
+  @include mediaqueries.mq($from: wide) {
     --sbb-spacing-responsive-m: var(--sbb-spacing-responsive-m-wide);
     --sbb-layout-base-offset-responsive: var(--sbb-layout-base-offset-responsive-wide);
   }
 
-  @include mq($from: ultra) {
+  @include mediaqueries.mq($from: ultra) {
     --sbb-spacing-responsive-l: var(--sbb-spacing-responsive-l-ultra);
     --sbb-spacing-responsive-xl: var(--sbb-spacing-responsive-xl-ultra);
     --sbb-spacing-responsive-xxl: var(--sbb-spacing-responsive-xxl-ultra);
@@ -105,7 +108,7 @@
   /// Responsive page offset
   // TODO: Remove once no longer needed.
   --sbb-page-base-offset-responsive: var(--sbb-layout-base-offset-responsive);
-  @include mq($from: ultra) {
+  @include mediaqueries.mq($from: ultra) {
     --sbb-page-base-offset-responsive: 0rem;
   }
 
@@ -115,19 +118,19 @@
 
   --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-zero);
 
-  @include mq($from: micro) {
+  @include mediaqueries.mq($from: micro) {
     --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-micro);
   }
-  @include mq($from: small) {
+  @include mediaqueries.mq($from: small) {
     --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-small);
   }
-  @include mq($from: medium) {
+  @include mediaqueries.mq($from: medium) {
     --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-medium);
   }
-  @include mq($from: large) {
+  @include mediaqueries.mq($from: large) {
     --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-large);
   }
-  @include mq($from: wide) {
+  @include mediaqueries.mq($from: wide) {
     --sbb-grid-base-columns: var(--sbb-layout-base-grid-columns-wide);
   }
 
@@ -137,19 +140,19 @@
 
   --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-zero);
 
-  @include mq($from: micro) {
+  @include mediaqueries.mq($from: micro) {
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-micro);
   }
-  @include mq($from: small) {
+  @include mediaqueries.mq($from: small) {
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-small);
   }
-  @include mq($from: medium) {
+  @include mediaqueries.mq($from: medium) {
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-medium);
   }
-  @include mq($from: large) {
+  @include mediaqueries.mq($from: large) {
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-large);
   }
-  @include mq($from: wide) {
+  @include mediaqueries.mq($from: wide) {
     --sbb-grid-base-gutter-responsive: var(--sbb-layout-base-grid-gutter-responsive-wide);
   }
 
@@ -160,7 +163,7 @@
   --sbb-size-button-m-min-height: var(--sbb-size-button-m-min-height-zero);
   --sbb-size-button-l-min-height: var(--sbb-size-button-l-min-height-zero);
 
-  @include mq($from: medium) {
+  @include mediaqueries.mq($from: medium) {
     --sbb-size-button-m-min-height: var(--sbb-size-button-m-min-height-medium);
     --sbb-size-button-l-min-height: var(--sbb-size-button-l-min-height-medium);
   }
@@ -172,7 +175,7 @@
   --sbb-size-form-element-m-min-height: var(--sbb-size-form-element-m-min-height-zero);
   --sbb-size-form-element-l-min-height: var(--sbb-size-form-element-l-min-height-zero);
 
-  @include mq($from: medium) {
+  @include mediaqueries.mq($from: medium) {
     --sbb-size-form-element-m-min-height: var(--sbb-size-form-element-m-min-height-medium);
     --sbb-size-form-element-l-min-height: var(--sbb-size-form-element-l-min-height-medium);
   }
@@ -192,7 +195,7 @@
 
   --sbb-header-height: var(--sbb-spacing-fixed-14x);
 
-  @include mq($from: medium) {
+  @include mediaqueries.mq($from: medium) {
     --sbb-header-height: var(--sbb-spacing-fixed-24x);
   }
 }
