--- a/src/global/styles/mixins/helpers.scss
+++ b/src/global/styles/mixins/helpers.scss
@@ -1,17 +1,3 @@
-@import 'mixins/mixins_a11y.scss';
-@import 'mixins/mixins_badge.scss';
-@import 'mixins/mixins_buttons.scss';
-@import 'mixins/mixins_card.scss';
-@import 'mixins/mixins_grid_layout.scss';
-@import 'mixins/mixins_list.scss';
-@import 'mixins/mixins_panel.scss';
-@import 'mixins/mixins_scrollbar.scss';
-@import 'mixins/mixins_shadows.scss';
-@import 'mixins/mixins_spacing.scss';
-@import 'mixins/mixins_typo.scss';
-
-@import 'mixins/mixins_dev_and_debug.scss';
-
 @mixin ellipsis() {
   overflow: hidden;
   white-space: nowrap;
@@ -64,4 +50,12 @@
   // Puts the element behind the parent while keeping it visible so that
   // it allows `click` events to propagate up.
   z-index: -1;
+}
+
+@mixin box-sizing {
+  *,
+  ::before,
+  ::after {
+    box-sizing: border-box;
+  }
 }
