--- a/src/global/styles/normalize.scss
+++ b/src/global/styles/normalize.scss
@@ -1,3 +1,5 @@
+@use './mixins/helpers';
+
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
 /*
@@ -9,7 +11,7 @@ Document
 Use a better box model (opinionated).
 */
 
-@include box-sizing;
+@include helpers.box-sizing;
 
 /**
 1. Correct the line height in all browsers. ///// Commented out since we define own line-height /////
